<resources>
    <string name="appName">BugTracker</string>
    <string name="titleProjects">Projects</string>
    <string name="titleRoadmap">Roadmap</string>
    <string name="titleDashboard">Dashboard</string>
    <string name="projectName">Project Name</string>
    <string name="dueDate">Due Date</string>
    <string name="task">Task</string>
    <string name="tasks">Tasks</string>
    <string name="roadmap">Roadmap</string>
    <string name="summary">Summary</string>
    <string name="description">Description</string>
    <string name="reminder">Reminder</string>
    <string name="reminderType">Reminder Type</string>
    <string name="repeat">Repeat</string>
    <string name="assigned">Assigned</string>
    <string name="reporter">Reporter</string>
    <string name="labels">Labels</string>
    <string name="highlight">Highlight</string>
    <string name="created">Created</string>
    <string name="newTask">New Task</string>
    <string name="letsGiveitaName">Let\'s give it a name</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="viewData">view_data</string>
    <string name="addUser">add_user</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="createProject">CreateProject</string>
    <string name="add_column">                    Add column</string>
    <string name="createTask">CreateTask</string>
    <string name="createBoard">create_board</string>
    <string name="create">Create</string>
    <string name="renameColumn">Rename column</string>
    <string name="moveColumnLeft">Move column left</string>
    <string name="moveColumnRight">Move column right</string>
    <string name="deleteColumn">Delete column</string>
    <string name="issue_type">Issue Type</string>
    <string name="projectCreateTask">ProjectCreateTask</string>
    <string name="projectEditTask">ProjectEditTask</string>
    <string name="edit_description">Edit Description</string>
    <string name="save">SAVE</string>
    <string name="type_to_edit_the_description">Type to edit the description</string>
    <string name="epic">Epic</string>
    <string name="start_date">Start Date</string>
    <string name="storageDateFormat">"dd'-'MM'-'yyyy"</string>

    <string name="getData">getData</string>  //update
    <string name="setupData">setupData</string> //refresh
    <string name="removeData">removeData</string>

    <string name="titleBoard">Board</string>
    <string name="titleAccount">Account</string>
    <string name="recentlyViewed">Recently Viewed</string>
    <string name="allProjects">All projects</string>
    <string name="starred">Starred</string>
    <string name="TEDTBottomDialog">TableEditTask_BottomDialog</string>
    <string name="projectUsers">projectUsers</string> <!--dont change the value or it will break stuff-->

</resources>