<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_projects_24dp"
        android:title="@string/titleProjects" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/titleDashboard" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/titleNotifications" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_24dp"
        android:title="@string/titleAccount" />

</menu>