<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray"
    android:padding="8dp">

    <ImageButton
        android:layout_marginTop="4dp"
        android:id="@+id/closeBtn"
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:tint="@color/purple_500"
        android:src="@drawable/ic_close_28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="item name"
        android:maxLines="2"
        android:maxLength="30"
        android:textColor="@color/white87"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeBtn" />

    <Button
        android:id="@+id/columnSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="In progress"
        android:textColor="@color/white87"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/titleMiddle"
        app:layout_constraintTop_toBottomOf="@+id/titleMiddle" />

    <!--no idea how else to set the marginStart to match the midTitle margin-->
    <TextView
        android:layout_marginStart="12dp"
        android:id="@+id/descriptionTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:maxHeight="150dp"
        android:minHeight="80dp"
        android:hint="@string/description"
        android:textColorHint="@color/white38"
        android:textColor="@color/white60"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/columnSelector"
        app:layout_constraintTop_toBottomOf="@+id/columnSelector" />

    <TextView
        android:id="@+id/issueTypeTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/issue_type"
        android:textColor="@color/white38"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/descriptionTxt"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTxt" />

    <ImageButton
        android:id="@+id/issueTypeImb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:padding="4dp"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"
        android:src="@drawable/ic_account_24dp"
        app:layout_constraintStart_toStartOf="@+id/issueTypeTop"
        app:layout_constraintTop_toBottomOf="@+id/issueTypeTop" />

    <TextView
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:id="@+id/issueTypeMainTxt"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:text="@string/epic"
        android:textColor="@color/white60"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/issueTypeImb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/issueTypeImb"
        app:layout_constraintTop_toTopOf="@+id/issueTypeImb" />

    <Button
        android:id="@+id/startDateBtn"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="24dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="@+id/issueTypeImb"
        app:layout_constraintTop_toBottomOf="@+id/issueTypeImb" />

    <TextView
        android:id="@+id/startDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/start_date"
        android:textColor="@color/white60"
        app:layout_constraintStart_toStartOf="@+id/issueTypeImb"
        app:layout_constraintTop_toBottomOf="@+id/issueTypeImb" />

    <TextView
        android:id="@+id/startDateDescriptionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text=""
        android:textColor="@color/white87"
        android:textSize="17sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/startDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/startDateTxt" />

    <Button
        android:id="@+id/dueDateBtn"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="52dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="@+id/startDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/startDateTxt" />

    <TextView
        android:id="@+id/dueDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/dueDate"
        android:textColor="@color/white60"
        app:layout_constraintStart_toStartOf="@+id/startDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/startDateTxt" />

    <TextView
        android:id="@+id/dueDateDescriptionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white87"
        android:textSize="17sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/dueDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/dueDateTxt" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Delete epic"
        android:textColor="@color/white60"
        app:layout_constraintStart_toStartOf="@+id/dueDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/dueDateBtn" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_red"
        android:layout_marginTop="4dp"
        android:text="@string/delete"
        android:textColor="@color/white87"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>