<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray"
    android:padding="8dp">

    <ImageButton
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_arrow_back_24dp"
        android:tint="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/create"
        android:textColor="@color/purple_500"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/closeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/closeBtn" />

    <TextView
        android:id="@+id/titleMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="Project Name"
        android:textColor="@color/white87"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeBtn" />


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_null_background"
        app:layout_constraintBottom_toBottomOf="@+id/titleMiddle"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/titleMiddle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/epic"
        android:textColor="@color/white87"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/titleMiddle"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/titleMiddle" />

    <EditText
        android:id="@+id/titleEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:hint="Summary"
        android:maxLines="3"
        android:textColor="@color/white87"
        android:textColorHint="@color/white60"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMiddle" />

    <EditText
        android:id="@+id/descriptionEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/description"
        android:maxLines="5"
        android:textColor="@color/white87"
        android:textColorHint="@color/white38"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/titleEdt"
        app:layout_constraintTop_toBottomOf="@+id/titleEdt" />

    <Button
        android:id="@+id/startDateButton"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="24dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="@+id/descriptionEdt"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEdt" />

    <TextView
        android:id="@+id/startDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="26dp"
        android:text="@string/start_date"
        android:textColor="@color/white60"
        app:layout_constraintStart_toStartOf="@+id/descriptionEdt"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEdt" />

    <TextView
        android:id="@+id/startDateDescriptionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text=""
        android:textColor="@color/white87"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/startDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/startDateTxt" />

    <Button
        android:id="@+id/dueDateButton"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="52dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="@+id/startDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/startDateTxt" />

    <TextView
        android:id="@+id/dueDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/dueDate"
        android:textColor="@color/white60"
        app:layout_constraintStart_toStartOf="@+id/startDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/startDateTxt" />

    <TextView
        android:id="@+id/dueDateDescriptionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white87"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/dueDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/dueDateTxt" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".55" />

</androidx.constraintlayout.widget.ConstraintLayout>