<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray"
    android:padding="8dp">

    <ImageButton
        android:layout_marginTop="4dp"
        android:id="@+id/closeBtn"
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:tint="@color/purple_500"
        android:src="@drawable/ic_close_28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/topSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SAVE"
        android:layout_margin="4dp"
        android:textColor="@color/purple_500"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/titleMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="item name"
        android:maxLines="2"
        android:maxLength="30"
        android:textColor="@color/white87"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeBtn" />

    <Button
        android:id="@+id/columnSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="column selector"
        android:textColor="@color/white87"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/titleMiddle"
        app:layout_constraintTop_toBottomOf="@+id/titleMiddle" />

    <!--no idea how else to set the marginStart to match the midTitle margin-->
    <TextView
        android:layout_marginStart="12dp"
        android:id="@+id/descriptionTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:maxHeight="150dp"
        android:minHeight="80dp"
        android:hint="@string/description"
        android:textColorHint="@color/white38"
        android:textColor="@color/white60"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/columnSelector"
        app:layout_constraintTop_toBottomOf="@+id/columnSelector" />

    <TextView
        android:id="@+id/issueTypeTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/issue_type"
        android:textColor="@color/white38"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/descriptionTxt"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTxt" />

    <ImageButton
        android:background="@color/transparent"
        android:paddingStart="0dp"
        android:padding="4dp"
        android:paddingEnd="8dp"
        android:id="@+id/roleImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_account_24dp"
        app:layout_constraintStart_toStartOf="@+id/issueTypeTop"
        app:layout_constraintTop_toBottomOf="@+id/issueTypeTop" />

    <TextView
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:id="@+id/roleMainTxt"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:text="@string/task"
        android:textColor="@color/white60"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/roleImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roleImg"
        app:layout_constraintTop_toTopOf="@+id/roleImg" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:layout_marginTop="24dp"
        android:textColor="@color/white60"
        app:layout_constraintStart_toStartOf="@+id/roleImg"
        app:layout_constraintTop_toBottomOf="@+id/roleImg" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_red"
        android:layout_marginTop="4dp"
        android:text="@string/delete"
        android:textColor="@color/white87"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>